# daemon-manager

./: CLAUDE.md  LICENSE  Makefile  daemon_manager.py  ipc.py  pyproject.toml  server.py
.claude-plugin/: plugin.json
skills/setup/: SKILL.md
tests/: test_daemon_manager.py  test_ipc.py  test_manifest.py
