[project]
name = "daemon-manager"
version = "1.1.0"
description = "Generic daemon lifecycle manager for Claude Code plugins"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Thatcher"}]
dependencies = [
    "mcp[cli]",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
