[project]
name = "daemon-manager"
version = "1.1.2"
description = "Generic daemon lifecycle manager for Claude Code plugins"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Thatcher"}]
dependencies = [
    "mcp[cli]",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
